[gd_scene load_steps=2 format=2]

[ext_resource path="res://Skripte/Spielverwaltung/Nutzerdateien.gd" type="Script" id=1]

[node name="Nutzerdateien" type="Node2D"]
pause_mode = 2
position = Vector2( 0, 222 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 25.0703
margin_top = 176.601
margin_right = 67.0703
margin_bottom = 190.601
text = "Daten:"

[node name="Nutzerdaten" type="TextEdit" parent="."]
margin_left = 23.0
margin_top = 194.0
margin_right = 428.0
margin_bottom = 231.0

[node name="Importieren" type="Button" parent="."]
margin_left = 255.414
margin_top = 252.0
margin_right = 405.414
margin_bottom = 287.0
text = "Importieren"

[node name="Exportieren" type="Button" parent="."]
margin_left = 40.1752
margin_top = 252.0
margin_right = 190.175
margin_bottom = 287.0
text = "Exportieren"

[node name="Zurueck" type="Button" parent="."]
margin_left = 176.852
margin_top = 336.705
margin_right = 276.852
margin_bottom = 376.705
text = "Spielen"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 46.629
margin_top = -179.0
margin_right = 414.629
margin_bottom = 148.0
text = "Hier kannst du dein aktuelles Design exportieren. 

Export:
Klicke dafür einfach auf \"Exportieren\", der Text aus dem Textfeld kopiert sich dann automatisch in deine Zwischenablage, von wo aus du ihn an einer beliebigen Stelle einfügen kannst. 


Import:
Um das exportierte Design zu nutzen, füge den kopierten Text in das Textfeld ein und klicke auf \"importieren\"


Achtung! 
Es wird nur das momentan aktive Design gespeichert! Deine Vorlagen werden nicht mit gespeichert. Wenn du diese ebenfalls haben möchtest, nutze sie als aktives Design und führe einen weiteren Export aus."
[connection signal="button_up" from="Importieren" to="." method="_on_Importieren"]
[connection signal="button_up" from="Exportieren" to="." method="_on_Exportieren"]
[connection signal="button_up" from="Zurueck" to="." method="_on_Zurueck"]
